--- a/.md
+++ b/.md
@@ -1,665 +1,1 @@
-<ref *2> IncomingMessage {
-  _readableState: ReadableState {
-    objectMode: false,
-    highWaterMark: 16384,
-    buffer: BufferList { head: null, tail: null, length: 0 },
-    length: 0,
-    pipes: [],
-    flowing: true,
-    ended: true,
-    endEmitted: true,
-    reading: false,
-    constructed: true,
-    sync: false,
-    needReadable: false,
-    emittedReadable: false,
-    readableListening: false,
-    resumeScheduled: false,
-    errorEmitted: false,
-    emitClose: true,
-    autoDestroy: true,
-    destroyed: false,
-    errored: null,
-    closed: false,
-    closeEmitted: false,
-    defaultEncoding: 'utf8',
-    awaitDrainWriters: null,
-    multiAwaitDrain: false,
-    readingMore: false,
-    dataEmitted: true,
-    decoder: null,
-    encoding: null,
-    [Symbol(kPaused)]: false
-  },
-  _events: [Object: null prototype] { end: [Function: clearRequestTimeout] },
-  _eventsCount: 1,
-  _maxListeners: undefined,
-  socket: <ref *1> Socket {
-    connecting: false,
-    _hadError: false,
-    _parent: null,
-    _host: null,
-    _closeAfterHandlingError: false,
-    _readableState: ReadableState {
-      objectMode: false,
-      highWaterMark: 16384,
-      buffer: BufferList { head: null, tail: null, length: 0 },
-      length: 0,
-      pipes: [],
-      flowing: true,
-      ended: false,
-      endEmitted: false,
-      reading: true,
-      constructed: true,
-      sync: false,
-      needReadable: true,
-      emittedReadable: false,
-      readableListening: false,
-      resumeScheduled: false,
-      errorEmitted: false,
-      emitClose: false,
-      autoDestroy: true,
-      destroyed: false,
-      errored: null,
-      closed: false,
-      closeEmitted: false,
-      defaultEncoding: 'utf8',
-      awaitDrainWriters: null,
-      multiAwaitDrain: false,
-      readingMore: false,
-      dataEmitted: false,
-      decoder: null,
-      encoding: null,
-      [Symbol(kPaused)]: false
-    },
-    _events: [Object: null prototype] {
-      end: [Array],
-      timeout: [Function: socketOnTimeout],
-      data: [Function: bound socketOnData],
-      error: [Function: socketOnError],
-      close: [Array],
-      drain: [Function: bound socketOnDrain],
-      resume: [Function: onSocketResume],
-      pause: [Function: onSocketPause]
-    },
-    _eventsCount: 8,
-    _maxListeners: undefined,
-    _writableState: WritableState {
-      objectMode: false,
-      highWaterMark: 16384,
-      finalCalled: false,
-      needDrain: false,
-      ending: false,
-      ended: false,
-      finished: false,
-      destroyed: false,
-      decodeStrings: false,
-      defaultEncoding: 'utf8',
-      length: 0,
-      writing: false,
-      corked: 0,
-      sync: true,
-      bufferProcessing: false,
-      onwrite: [Function: bound onwrite],
-      writecb: null,
-      writelen: 0,
-      afterWriteTickInfo: null,
-      buffered: [],
-      bufferedIndex: 0,
-      allBuffers: true,
-      allNoop: true,
-      pendingcb: 0,
-      constructed: true,
-      prefinished: false,
-      errorEmitted: false,
-      emitClose: false,
-      autoDestroy: true,
-      errored: null,
-      closed: false,
-      closeEmitted: false,
-      [Symbol(kOnFinished)]: []
-    },
-    allowHalfOpen: true,
-    _sockname: null,
-    _pendingData: null,
-    _pendingEncoding: '',
-    server: Server {
-      maxHeaderSize: undefined,
-      insecureHTTPParser: undefined,
-      _events: [Object: null prototype],
-      _eventsCount: 3,
-      _maxListeners: undefined,
-      _connections: 1,
-      _handle: [TCP],
-      _usingWorkers: false,
-      _workers: [],
-      _unref: false,
-      allowHalfOpen: true,
-      pauseOnConnect: false,
-      noDelay: false,
-      keepAlive: false,
-      keepAliveInitialDelay: 0,
-      httpAllowHalfOpen: false,
-      timeout: 0,
-      keepAliveTimeout: 5000,
-      maxHeadersCount: null,
-      maxRequestsPerSocket: 0,
-      headersTimeout: 60000,
-      requestTimeout: 0,
-      _connectionKey: '6::::8001',
-      [Symbol(IncomingMessage)]: [Function: IncomingMessage],
-      [Symbol(ServerResponse)]: [Function: ServerResponse],
-      [Symbol(kCapture)]: false,
-      [Symbol(async_id_symbol)]: 130,
-      [Symbol(kUniqueHeaders)]: null
-    },
-    _server: Server {
-      maxHeaderSize: undefined,
-      insecureHTTPParser: undefined,
-      _events: [Object: null prototype],
-      _eventsCount: 3,
-      _maxListeners: undefined,
-      _connections: 1,
-      _handle: [TCP],
-      _usingWorkers: false,
-      _workers: [],
-      _unref: false,
-      allowHalfOpen: true,
-      pauseOnConnect: false,
-      noDelay: false,
-      keepAlive: false,
-      keepAliveInitialDelay: 0,
-      httpAllowHalfOpen: false,
-      timeout: 0,
-      keepAliveTimeout: 5000,
-      maxHeadersCount: null,
-      maxRequestsPerSocket: 0,
-      headersTimeout: 60000,
-      requestTimeout: 0,
-      _connectionKey: '6::::8001',
-      [Symbol(IncomingMessage)]: [Function: IncomingMessage],
-      [Symbol(ServerResponse)]: [Function: ServerResponse],
-      [Symbol(kCapture)]: false,
-      [Symbol(async_id_symbol)]: 130,
-      [Symbol(kUniqueHeaders)]: null
-    },
-    parser: HTTPParser {
-      '0': [Function: bound setRequestTimeout],
-      '1': [Function: parserOnHeaders],
-      '2': [Function: parserOnHeadersComplete],
-      '3': [Function: parserOnBody],
-      '4': [Function: parserOnMessageComplete],
-      '5': [Function: bound onParserExecute],
-      '6': [Function: bound onParserTimeout],
-      _headers: [],
-      _url: '',
-      socket: [Circular *1],
-      incoming: [Circular *2],
-      outgoing: null,
-      maxHeaderPairs: 2000,
-      _consumed: true,
-      onIncoming: [Function: bound parserOnIncoming],
-      [Symbol(resource_symbol)]: [HTTPServerAsyncResource]
-    },
-    on: [Function: socketListenerWrap],
-    addListener: [Function: socketListenerWrap],
-    prependListener: [Function: socketListenerWrap],
-    setEncoding: [Function: socketSetEncoding],
-    _paused: false,
-    _httpMessage: ServerResponse {
-      _events: [Object: null prototype],
-      _eventsCount: 1,
-      _maxListeners: undefined,
-      outputData: [],
-      outputSize: 0,
-      writable: true,
-      destroyed: false,
-      _last: false,
-      chunkedEncoding: false,
-      shouldKeepAlive: false,
-      maxRequestsOnConnectionReached: false,
-      _defaultKeepAlive: true,
-      useChunkedEncodingByDefault: true,
-      sendDate: true,
-      _removedConnection: false,
-      _removedContLen: false,
-      _removedTE: false,
-      strictContentLength: false,
-      _contentLength: null,
-      _hasBody: true,
-      _trailer: '',
-      finished: false,
-      _headerSent: false,
-      _closed: false,
-      socket: [Circular *1],
-      _header: null,
-      _keepAliveTimeout: 5000,
-      _onPendingData: [Function: bound updateOutgoingData],
-      req: [Circular *2],
-      _sent100: false,
-      _expect_continue: false,
-      _maxRequestsPerSocket: 0,
-      locals: [Object: null prototype] {},
-      [Symbol(kCapture)]: false,
-      [Symbol(kBytesWritten)]: 0,
-      [Symbol(kEndCalled)]: false,
-      [Symbol(kNeedDrain)]: false,
-      [Symbol(corked)]: 0,
-      [Symbol(kOutHeaders)]: [Object: null prototype],
-      [Symbol(kUniqueHeaders)]: null
-    },
-    [Symbol(async_id_symbol)]: 145,
-    [Symbol(kHandle)]: TCP {
-      reading: true,
-      onconnection: null,
-      _consumed: true,
-      [Symbol(owner_symbol)]: [Circular *1]
-    },
-    [Symbol(lastWriteQueueSize)]: 0,
-    [Symbol(timeout)]: null,
-    [Symbol(kBuffer)]: null,
-    [Symbol(kBufferCb)]: null,
-    [Symbol(kBufferGen)]: null,
-    [Symbol(kCapture)]: false,
-    [Symbol(kSetNoDelay)]: false,
-    [Symbol(kSetKeepAlive)]: false,
-    [Symbol(kSetKeepAliveInitialDelay)]: 0,
-    [Symbol(kBytesRead)]: 0,
-    [Symbol(kBytesWritten)]: 0,
-    [Symbol(RequestTimeout)]: undefined
-  },
-  httpVersionMajor: 1,
-  httpVersionMinor: 1,
-  httpVersion: '1.1',
-  complete: true,
-  rawHeaders: [
-    'content-type',
-    'application/json',
-    'user-agent',
-    'PostmanRuntime/7.36.3',
-    'accept',
-    '*/*',
-    'postman-token',
-    '280e9c91-5f39-453f-bad4-9a8b258ab947',
-    'accept-encoding',
-    'gzip, deflate, br',
-    'connection',
-    'close',
-    'Content-Length',
-    '61',
-    'Accept-Charset',
-    'utf-8',
-    'Host',
-    'localhost:8001'
-  ],
-  rawTrailers: [],
-  aborted: false,
-  upgrade: false,
-  url: '/signup',
-  method: 'POST',
-  statusCode: null,
-  statusMessage: null,
-  client: <ref *1> Socket {
-    connecting: false,
-    _hadError: false,
-    _parent: null,
-    _host: null,
-    _closeAfterHandlingError: false,
-    _readableState: ReadableState {
-      objectMode: false,
-      highWaterMark: 16384,
-      buffer: BufferList { head: null, tail: null, length: 0 },
-      length: 0,
-      pipes: [],
-      flowing: true,
-      ended: false,
-      endEmitted: false,
-      reading: true,
-      constructed: true,
-      sync: false,
-      needReadable: true,
-      emittedReadable: false,
-      readableListening: false,
-      resumeScheduled: false,
-      errorEmitted: false,
-      emitClose: false,
-      autoDestroy: true,
-      destroyed: false,
-      errored: null,
-      closed: false,
-      closeEmitted: false,
-      defaultEncoding: 'utf8',
-      awaitDrainWriters: null,
-      multiAwaitDrain: false,
-      readingMore: false,
-      dataEmitted: false,
-      decoder: null,
-      encoding: null,
-      [Symbol(kPaused)]: false
-    },
-    _events: [Object: null prototype] {
-      end: [Array],
-      timeout: [Function: socketOnTimeout],
-      data: [Function: bound socketOnData],
-      error: [Function: socketOnError],
-      close: [Array],
-      drain: [Function: bound socketOnDrain],
-      resume: [Function: onSocketResume],
-      pause: [Function: onSocketPause]
-    },
-    _eventsCount: 8,
-    _maxListeners: undefined,
-    _writableState: WritableState {
-      objectMode: false,
-      highWaterMark: 16384,
-      finalCalled: false,
-      needDrain: false,
-      ending: false,
-      ended: false,
-      finished: false,
-      destroyed: false,
-      decodeStrings: false,
-      defaultEncoding: 'utf8',
-      length: 0,
-      writing: false,
-      corked: 0,
-      sync: true,
-      bufferProcessing: false,
-      onwrite: [Function: bound onwrite],
-      writecb: null,
-      writelen: 0,
-      afterWriteTickInfo: null,
-      buffered: [],
-      bufferedIndex: 0,
-      allBuffers: true,
-      allNoop: true,
-      pendingcb: 0,
-      constructed: true,
-      prefinished: false,
-      errorEmitted: false,
-      emitClose: false,
-      autoDestroy: true,
-      errored: null,
-      closed: false,
-      closeEmitted: false,
-      [Symbol(kOnFinished)]: []
-    },
-    allowHalfOpen: true,
-    _sockname: null,
-    _pendingData: null,
-    _pendingEncoding: '',
-    server: Server {
-      maxHeaderSize: undefined,
-      insecureHTTPParser: undefined,
-      _events: [Object: null prototype],
-      _eventsCount: 3,
-      _maxListeners: undefined,
-      _connections: 1,
-      _handle: [TCP],
-      _usingWorkers: false,
-      _workers: [],
-      _unref: false,
-      allowHalfOpen: true,
-      pauseOnConnect: false,
-      noDelay: false,
-      keepAlive: false,
-      keepAliveInitialDelay: 0,
-      httpAllowHalfOpen: false,
-      timeout: 0,
-      keepAliveTimeout: 5000,
-      maxHeadersCount: null,
-      maxRequestsPerSocket: 0,
-      headersTimeout: 60000,
-      requestTimeout: 0,
-      _connectionKey: '6::::8001',
-      [Symbol(IncomingMessage)]: [Function: IncomingMessage],
-      [Symbol(ServerResponse)]: [Function: ServerResponse],
-      [Symbol(kCapture)]: false,
-      [Symbol(async_id_symbol)]: 130,
-      [Symbol(kUniqueHeaders)]: null
-    },
-    _server: Server {
-      maxHeaderSize: undefined,
-      insecureHTTPParser: undefined,
-      _events: [Object: null prototype],
-      _eventsCount: 3,
-      _maxListeners: undefined,
-      _connections: 1,
-      _handle: [TCP],
-      _usingWorkers: false,
-      _workers: [],
-      _unref: false,
-      allowHalfOpen: true,
-      pauseOnConnect: false,
-      noDelay: false,
-      keepAlive: false,
-      keepAliveInitialDelay: 0,
-      httpAllowHalfOpen: false,
-      timeout: 0,
-      keepAliveTimeout: 5000,
-      maxHeadersCount: null,
-      maxRequestsPerSocket: 0,
-      headersTimeout: 60000,
-      requestTimeout: 0,
-      _connectionKey: '6::::8001',
-      [Symbol(IncomingMessage)]: [Function: IncomingMessage],
-      [Symbol(ServerResponse)]: [Function: ServerResponse],
-      [Symbol(kCapture)]: false,
-      [Symbol(async_id_symbol)]: 130,
-      [Symbol(kUniqueHeaders)]: null
-    },
-    parser: HTTPParser {
-      '0': [Function: bound setRequestTimeout],
-      '1': [Function: parserOnHeaders],
-      '2': [Function: parserOnHeadersComplete],
-      '3': [Function: parserOnBody],
-      '4': [Function: parserOnMessageComplete],
-      '5': [Function: bound onParserExecute],
-      '6': [Function: bound onParserTimeout],
-      _headers: [],
-      _url: '',
-      socket: [Circular *1],
-      incoming: [Circular *2],
-      outgoing: null,
-      maxHeaderPairs: 2000,
-      _consumed: true,
-      onIncoming: [Function: bound parserOnIncoming],
-      [Symbol(resource_symbol)]: [HTTPServerAsyncResource]
-    },
-    on: [Function: socketListenerWrap],
-    addListener: [Function: socketListenerWrap],
-    prependListener: [Function: socketListenerWrap],
-    setEncoding: [Function: socketSetEncoding],
-    _paused: false,
-    _httpMessage: ServerResponse {
-      _events: [Object: null prototype],
-      _eventsCount: 1,
-      _maxListeners: undefined,
-      outputData: [],
-      outputSize: 0,
-      writable: true,
-      destroyed: false,
-      _last: false,
-      chunkedEncoding: false,
-      shouldKeepAlive: false,
-      maxRequestsOnConnectionReached: false,
-      _defaultKeepAlive: true,
-      useChunkedEncodingByDefault: true,
-      sendDate: true,
-      _removedConnection: false,
-      _removedContLen: false,
-      _removedTE: false,
-      strictContentLength: false,
-      _contentLength: null,
-      _hasBody: true,
-      _trailer: '',
-      finished: false,
-      _headerSent: false,
-      _closed: false,
-      socket: [Circular *1],
-      _header: null,
-      _keepAliveTimeout: 5000,
-      _onPendingData: [Function: bound updateOutgoingData],
-      req: [Circular *2],
-      _sent100: false,
-      _expect_continue: false,
-      _maxRequestsPerSocket: 0,
-      locals: [Object: null prototype] {},
-      [Symbol(kCapture)]: false,
-      [Symbol(kBytesWritten)]: 0,
-      [Symbol(kEndCalled)]: false,
-      [Symbol(kNeedDrain)]: false,
-      [Symbol(corked)]: 0,
-      [Symbol(kOutHeaders)]: [Object: null prototype],
-      [Symbol(kUniqueHeaders)]: null
-    },
-    [Symbol(async_id_symbol)]: 145,
-    [Symbol(kHandle)]: TCP {
-      reading: true,
-      onconnection: null,
-      _consumed: true,
-      [Symbol(owner_symbol)]: [Circular *1]
-    },
-    [Symbol(lastWriteQueueSize)]: 0,
-    [Symbol(timeout)]: null,
-    [Symbol(kBuffer)]: null,
-    [Symbol(kBufferCb)]: null,
-    [Symbol(kBufferGen)]: null,
-    [Symbol(kCapture)]: false,
-    [Symbol(kSetNoDelay)]: false,
-    [Symbol(kSetKeepAlive)]: false,
-    [Symbol(kSetKeepAliveInitialDelay)]: 0,
-    [Symbol(kBytesRead)]: 0,
-    [Symbol(kBytesWritten)]: 0,
-    [Symbol(RequestTimeout)]: undefined
-  },
-  _consuming: true,
-  _dumped: false,
-  next: [Function: next],
-  baseUrl: '',
-  originalUrl: '/signup',
-  _parsedUrl: Url {
-    protocol: null,
-    slashes: null,
-    auth: null,
-    host: null,
-    port: null,
-    hostname: null,
-    hash: null,
-    search: null,
-    query: null,
-    pathname: '/signup',
-    path: '/signup',
-    href: '/signup',
-    _raw: '/signup'
-  },
-  params: {},
-  query: {},
-  res: <ref *3> ServerResponse {
-    _events: [Object: null prototype] { finish: [Function: bound resOnFinish] },
-    _eventsCount: 1,
-    _maxListeners: undefined,
-    outputData: [],
-    outputSize: 0,
-    writable: true,
-    destroyed: false,
-    _last: false,
-    chunkedEncoding: false,
-    shouldKeepAlive: false,
-    maxRequestsOnConnectionReached: false,
-    _defaultKeepAlive: true,
-    useChunkedEncodingByDefault: true,
-    sendDate: true,
-    _removedConnection: false,
-    _removedContLen: false,
-    _removedTE: false,
-    strictContentLength: false,
-    _contentLength: null,
-    _hasBody: true,
-    _trailer: '',
-    finished: false,
-    _headerSent: false,
-    _closed: false,
-    socket: <ref *1> Socket {
-      connecting: false,
-      _hadError: false,
-      _parent: null,
-      _host: null,
-      _closeAfterHandlingError: false,
-      _readableState: [ReadableState],
-      _events: [Object: null prototype],
-      _eventsCount: 8,
-      _maxListeners: undefined,
-      _writableState: [WritableState],
-      allowHalfOpen: true,
-      _sockname: null,
-      _pendingData: null,
-      _pendingEncoding: '',
-      server: [Server],
-      _server: [Server],
-      parser: [HTTPParser],
-      on: [Function: socketListenerWrap],
-      addListener: [Function: socketListenerWrap],
-      prependListener: [Function: socketListenerWrap],
-      setEncoding: [Function: socketSetEncoding],
-      _paused: false,
-      _httpMessage: [Circular *3],
-      [Symbol(async_id_symbol)]: 145,
-      [Symbol(kHandle)]: [TCP],
-      [Symbol(lastWriteQueueSize)]: 0,
-      [Symbol(timeout)]: null,
-      [Symbol(kBuffer)]: null,
-      [Symbol(kBufferCb)]: null,
-      [Symbol(kBufferGen)]: null,
-      [Symbol(kCapture)]: false,
-      [Symbol(kSetNoDelay)]: false,
-      [Symbol(kSetKeepAlive)]: false,
-      [Symbol(kSetKeepAliveInitialDelay)]: 0,
-      [Symbol(kBytesRead)]: 0,
-      [Symbol(kBytesWritten)]: 0,
-      [Symbol(RequestTimeout)]: undefined
-    },
-    _header: null,
-    _keepAliveTimeout: 5000,
-    _onPendingData: [Function: bound updateOutgoingData],
-    req: [Circular *2],
-    _sent100: false,
-    _expect_continue: false,
-    _maxRequestsPerSocket: 0,
-    locals: [Object: null prototype] {},
-    [Symbol(kCapture)]: false,
-    [Symbol(kBytesWritten)]: 0,
-    [Symbol(kEndCalled)]: false,
-    [Symbol(kNeedDrain)]: false,
-    [Symbol(corked)]: 0,
-    [Symbol(kOutHeaders)]: [Object: null prototype] {
-      'x-powered-by': [Array],
-      'access-control-allow-origin': [Array]
-    },
-    [Symbol(kUniqueHeaders)]: null
-  },
-  body: { email: 'oadefolajuwon@gmail.com', password: 'omertthegoat' },
-  _body: true,
-  length: undefined,
-  route: Route {
-    path: '/signup',
-    stack: [ [Layer] ],
-    methods: { post: true }
-  },
-  [Symbol(kCapture)]: false,
-  [Symbol(kHeaders)]: {
-    'content-type': 'application/json',
-    'user-agent': 'PostmanRuntime/7.36.3',
-    accept: '*/*',
-    'postman-token': '280e9c91-5f39-453f-bad4-9a8b258ab947',
-    'accept-encoding': 'gzip, deflate, br',
-    connection: 'close',
-    'content-length': '61',
-    'accept-charset': 'utf-8',
-    host: 'localhost:8001'
-  },
-  [Symbol(kHeadersCount)]: 18,
-  [Symbol(kTrailers)]: null,
-  [Symbol(kTrailersCount)]: 0,
-  [Symbol(RequestTimeout)]: undefined
-}
+http logger
